# draccus

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: mkdocs.yml  pre-commit.yml  pytest.yml
docs/: api.md  index.md  step_by_step.md
draccus/: __init__.py  argparsing.py  cfgparsing.py  choice_types.py  fields.py  help_formatter.py  options.py  utils.py
draccus/parsers/: __init__.py  config_parsers.py  decoding.py  encoding.py  registry_utils.py  yaml_loader.py
draccus/wrappers/: __init__.py  choice_wrapper.py  dataclass_wrapper.py  docstring.py  field_metavar.py  field_wrapper.py  suppressing_argparse.py  wrapper.py
etc/: license_header.txt
examples/: choice_class_demo.py  demo.py
obligate/: argparsing.py  cfgparsing.py  help_formatter.py  options.py  utils.py
obligate/parsers/: decoding.py  encoding.py
obligate/wrappers/: dataclass_wrapper.py  field_metavar.py  wrapper.py
tests/: __init__.py  conftest.py  test_argparse_choice_types.py  test_argparse_choice_types_plugin.py  test_base.py  test_bools.py  test_calling_using_dataclass.py  test_choice_types.py  test_decoding.py  test_default_args.py  test_docstrings.py  test_encoding.py  test_enums.py  test_future_annotations.py  test_generic_params.py  test_inheritance.py  test_lists.py  test_literals.py  test_load.py  test_optional.py  test_optional_choice_type.py  test_optional_union.py  test_preferred_help.py  test_tuples.py  test_union.py  test_utils.py  test_yaml_inclusion.py  test_yaml_inclusion_cli.py  testutils.py
tests/draccus_choice_plugins/: gpt.py  model_config.py
