[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "draccus"
version = "0.4.0"
authors = [
  { name="David Hall", email="dlwh@cs.stanford.edu" },
    { name="Sidd Karamcheti"},
]
description = "A framework for simple dataclass-based configurations."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
]
dependencies = [
  "typing_inspect",
  "dataclasses; python_version < '3.7'",
  "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/dlwh/draccus"
"Bug Tracker" = "https://github.com/dlwh/draccus/issues"

[tool.hatch.extras]
test = ["pytest"]

[tool.hatch.scripts."hatch.linter"]
exclude = ["migrations"]


[tool.black]
line-length = 119
target-version = ["py310"]
preview = true

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119

[tool.mypy]
python_version = "3.8"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
addopts = "--ignore=tests/draccus_choice_plugins"
