[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "draccus"
version = "0.9.3"
authors = [
  {name = "David Hall", email = "dlwh@cs.stanford.edu"},
  {name = "Siddharth Karamcheti", email = "skaramcheti@cs.stanford.edu"},
]
description = "A slightly opinionated framework for simple dataclass-based configurations based on Pyrallis."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "mergedeep~=1.3",
    "pyyaml~=6.0",
    "pyyaml-include~=1.4",
    "toml~=0.10",
    "typing-inspect~=0.9.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
]

[project.urls]
homepage = "https://github.com/dlwh/draccus"
repository = "https://github.com/dlwh/draccus"
issues = "https://github.com/dlwh/draccus/issues"

[tool.black]
line-length = 121
target-version = ["py38", "py39", "py310"]
preview = true

[tool.mypy]
python_version = "3.8"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --ignore=tests/draccus_choice_plugins"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 121
target-version = "py38"
select = ["A", "B", "E", "F", "I", "RUF", "W"]
ignore = ["A003", "RUF009"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/tests/*" = ["E402", "E741", "F401", "F403", "F405",]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["cache"]

[tool.setuptools.package-data]
"draccus" = ["py.typed"]
